exports[`test should render a SelectField when all the possible props are passed into it 1`] = `
<Field
  error="jinkies!"
  help="solve the mystery"
  isInline={true}
  label="Meddling Kids"
  labelAttrs={
    Object {
      "className": "mystery-van",
    }
  }
  required={true}>
  <Select
    choices={
      Array [
        Object {
          "display": "moo",
          "value": "m",
        },
        Object {
          "display": "boo",
          "value": "b",
        },
      ]
    }
    className="scooby-snacks"
    defaultValue={null}
    name="zounds"
    required={true} />
</Field>
`;

exports[`test should render a default SelectField component 1`] = `
<Field
  error={null}
  help={null}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  required={false}>
  <Select
    choices={
      Array [
        Object {
          "display": "moo",
          "value": "m",
        },
      ]
    }
    defaultValue={null}
    name={null}
    required={false} />
</Field>
`;

exports[`test should render as controlled when just the required fields and a onChange function is passed into the SelectField 1`] = `
<SelectField
  choices={
    Array [
      Object {
        "display": "moo",
        "value": "m",
      },
      Object {
        "display": "boo",
        "value": "b",
      },
    ]
  }
  error={null}
  help={null}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  name={null}
  onChange={[Function]}
  required={false}
  selectAttrs={Object {}}>
  <Field
    error={null}
    help={null}
    isInline={false}
    label={null}
    labelAttrs={Object {}}
    required={false}>
    <div
      className="terra-Form-field">
      <Select
        choices={
          Array [
            Object {
              "display": "moo",
              "value": "m",
            },
            Object {
              "display": "boo",
              "value": "b",
            },
          ]
        }
        defaultValue={null}
        name={null}
        onChange={[Function]}
        required={false}>
        <select
          className="terra-Form-select"
          defaultValue={null}
          name={null}
          onChange={[Function]}
          required={false}>
          <option
            value="m">
            moo
          </option>
          <option
            value="b">
            boo
          </option>
        </select>
      </Select>
    </div>
  </Field>
</SelectField>
`;

exports[`test should render as uncontrolled when just the required fields and a default value is passed into the SelectField 1`] = `
<SelectField
  choices={
    Array [
      Object {
        "display": "moo",
        "value": "m",
      },
      Object {
        "display": "boo",
        "value": "b",
      },
    ]
  }
  defaultValue="boo"
  error={null}
  help={null}
  isInline={false}
  label={null}
  labelAttrs={Object {}}
  name={null}
  required={false}
  selectAttrs={Object {}}>
  <Field
    error={null}
    help={null}
    isInline={false}
    label={null}
    labelAttrs={Object {}}
    required={false}>
    <div
      className="terra-Form-field">
      <Select
        choices={
          Array [
            Object {
              "display": "moo",
              "value": "m",
            },
            Object {
              "display": "boo",
              "value": "b",
            },
          ]
        }
        defaultValue="boo"
        name={null}
        required={false}>
        <select
          className="terra-Form-select"
          defaultValue="boo"
          name={null}
          required={false}>
          <option
            value="m">
            moo
          </option>
          <option
            value="b">
            boo
          </option>
        </select>
      </Select>
    </div>
  </Field>
</SelectField>
`;
